--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,39 @@
-version: '3.8'
-
+version: "3"
+networks:
+  shorturl-network:
+    driver: bridge
 services:
-  nestjs-app:
-    image: node:22-alpine
-    container_name: nestjs-app
-    working_dir: /app
-    volumes:
-      - ./:/app
-    command: npm run start:dev
+  api:
+    build:
+      dockerfile: Dockerfile
+      context: "./"
     ports:
       - "3000:3000"
-    environment:
-      - DATABASE_HOST=postgres
-      - DATABASE_PORT=5432
-      - DATABASE_USERNAME=nestjs_user
-      - DATABASE_PASSWORD=nestjs_password
-      - DATABASE_NAME=nestjs_db
-    depends_on:
-      - postgres
-
-  postgres:
-    image: postgres:14-alpine
-    container_name: postgres
-    environment:
-      - POSTGRES_USER=nestjs_user
-      - POSTGRES_PASSWORD=nestjs_password
-      - POSTGRES_DB=nestjs_db
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - /app/node_modules
+      - ./:/app
+    environment:
+      - PORT=3000
+      - HOST=0.0.0.0
+      - PGUSER=postgres
+      - PGHOST=database
+      - PGDATABASE=postgres
+      - PGPASSWORD=root
+      - PGPORT=5432
+    networks:
+      - shorturl-network
+  database:
+    image: postgres:14
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=postgres
     ports:
-      - "5432:5432"
-
+      - 5432:5432
+    volumes:
+      - db-data:/var/lib/postgresql/data/
+    restart: always
+    networks:
+      - shorturl-network
 volumes:
-  postgres-data:
+  db-data:
